--- a/contato.html
+++ b/contato.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/img/css/style.css">
+   
+
 </head>
-<body>
-    <ul>
+<body> 
+   <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -17,8 +20,10 @@
        </li>
    </ul>
 
-   <h1>Entre em contato conosco</h1>
-
+   <h1 class="center">Entre em contato conosco</h1>
+   
+   
+<ul class="center">
 <form>
   <label for="nome">Nome</label><br>
   <input type="text" id="nome">
@@ -33,7 +38,7 @@
 <br>
 <br>
 <button>Enviar</button>
-
+</ul>
 </form>
 
 
