--- a/contato.html
+++ b/contato.html
@@ -25,22 +25,22 @@
    
 <ul class="center">
 <form>
-  <label for="nome">Nome</label><br>
-  <input type="text" id="nome">
+  <label for="nome">Nome:</label><br>
+  <input type="text" id="nome" onkeyup='validaNome()'>
+  <div id ='txtNome'> </div>
+  <br>
+  <label for="email">E-mail:</label><br>
+  <input type="text" id="email"onkeyup='validaEmail()'>
+  <div id ='txtEmail'> </div>
 <br>
+<label for="assunto">Assunto:</label> <br>
+<textarea name="text" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+<div id ='txtAssunto'></div>
 <br>
-  <label for="email">E-mail</label><br>
-  <input type="email" id="email">
-<br>
-<br>
-<label for="assunto">Assunto</label><br>
-<textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-<br>
-<br>
-<button>Enviar</button>
+<button onclick= "enviar()">Enviar </button>
 </ul>
 </form>
 
-
+<script src="assets/js/script.js"></script>
 </body>
 </html>
